<resources>
    <string name="app_name">Project</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="already_have_an_account">Already have an account.</string>
    <string name="your_password">Your Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="your_email">Your Email</string>
    <string name="sign_up">Sign up</string>
    <string name="background">background</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account_2">Already have an account?</string>
    <string name="logo">logo</string>
    <string name="hi_welcome_back">Hi, welcome back</string>
    <string name="ashraf">Ashraf</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email_2">Enter Your Email</string>
    <string name="enter_your_password_2">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="your_username">Your Username</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="create">Create</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cleaningroom">CleaningRoom</string>
    <string name="grocery">Grocery</string>
    <string name="e_hailing">E-Hailing</string>
    <string name="food_delivery">Food Delivery</string>
    <string name="laundry">Laundry</string>
    <string name="todo">TODO</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="hello">HELLO</string>
    <string name="name">TODO</string>

    <string name="phone_number">Phone Number</string>
    <string name="utp_logo">utp_logo</string>
    <string name="profile_logo">profile_logo</string>
    <string name="about_us">ABOUT US</string>
    <string name="details">Details</string>
    <string name="ucare_logo">UCare_Logo</string>
    <string name="button_logOut">Log Out</string>
    <string name="faq">FAQ</string>

    <string name="aboutUsParagraph1">UCare was created by a group of 10 students as a university assignment project. We
        wanted to create an app that would make a difference in people\'s lives by providing easy access to care and
        support services. We worked tirelessly to develop and refine the app, drawing on our diverse skills and
        backgrounds to create a truly unique and valuable tool.
    </string>
    <string name="aboutUsParagraph2">As students ourselves, we understand the challenges that come with juggling
        coursework, extracurricular activities, and other commitments. That\'s why we designed UCare to be
        user-friendly, convenient, and tailored to the needs of busy students and professionals. We believe that
        everyone deserves access to high-quality care services, regardless of their circumstances or background.
    </string>
    <string name="aboutUsParagraph3">Since launching UCare, we\'ve been thrilled to see the positive impact it\'s had on
        the lives of our users. From providing basic household assistance to specialized care and support, our app has
        helped countless people live more comfortably and confidently. We\'re committed to continuing to improve and
        expand our services, so that we can reach even more people who need our help.
    </string>
    <string name="aboutUsParagraph4">Thank you for choosing UCare - we\'re proud to be a student-created app that\'s
        making a real difference in the world.
    </string>

    <string name="privacy_and_policy">Privacy and Policy</string>
    <string name="privacyPolicyParagraph1">Privacy Policy for UCare At UCare, we take your privacy and security very
        seriously. This Privacy Policy outlines how we collect, use, and protect your personal information when you use
        our app.
    </string>
    <string name="privacyPolicyParagraph2"><b>1. Information We Collect</b>\nWhen you use UCare, we may collect the
        following types of personal information: \n\n- Name \n- Contact information \n(such as phone number and email
        address) \n- Location data \n- Payment information

    </string>
    <string name="privacyPolicyParagraph3"><b>2. How We Use Your Information</b>\nWe use your personal information for
        the following purposes:\n\n- To provide care services to you\n- To communicate with you regarding your care
        services\n- To improve our app and services\n- To comply with legal and regulatory requirements\n\nWe will not
        share your personal information with third parties, except as necessary to provide care services to you or as
        required by law.
    </string>
    <string name="privacyPolicyParagraph4"><b>3. How We Protect Your Information</b>\nWe take appropriate technical and
        organizational measures to protect your personal information from unauthorized access, disclosure, or misuse. We
        use industry-standard encryption and security technologies to protect your data.
    </string>
    <string name="privacyPolicyParagraph5"><b>4. Your Rights</b>\nYou have the right to access, correct, or delete your
        personal information at any time. You also have the right to withdraw your consent for us to collect and use
        your personal information.
    </string>
    <string name="privacyPolicyParagraph6"><b>5. Updates to this policy</b>\nWe may update this Privacy Policy from time
        to time to reflect changes in our app and services, or changes in applicable laws and regulations. We will
        notify you of any material changes to this Policy.
    </string>
    <string name="privacyPolicyParagraph7">
        <b>If you have any questions or concerns about our Privacy Policy or how we handle your personal information,
            please contact us at support@ucare.com.
        </b>
    </string>
    <string name="privacyPolicyParagraph8">
        <b>Effective Date: March 9, 2023</b>

    </string>
    <string name="privacy_policy">privacy policy
    </string>

    <string name="faqParagraph1"><b>Q: What is UCare?</b>\nA: UCare is an app that provides access to care and support
        services for people in need. Whether you need help with everyday tasks or require specialized care and support,
        UCare can connect you with care providers in your area.
    </string>
    <string name="faqParagraph2"><b>Q: How does UCare work?</b>\nA: First, download the UCare app from the App Store or
        Google Play Store. Then, create an account and fill out your profile with your care needs and preferences. From
        there, you can browse through our list of care providers, schedule appointments, and manage your care plans -
        all from the convenience of your mobile device.
    </string>
    <string name="faqParagraph3"><b>Q: What kind of care services does UCare offer?</b>\n A: UCare offers a wide range
        of care services, including:\n- Grocery\n- Laundry\n- E-Hailing\n- Food Delivery\n - Room Cleaning
    </string>
    <string name="faqParagraph4"><b>: How much does UCare cost?</b>\nA: The cost of care services on UCare varies
        depending on the type of service and location. Care providers set their own rates, and you can view pricing
        information before booking an appointment.
    </string>
    <string name="faqParagraph5"><b>Q: Is UCare available in my area?</b>\nA: UCare is currently available in select
        areas. To see if UCare is available in your area, download the app and enter your location information.
    </string>
    <string name="faqParagraph6"><b>Q: What if I have a problem with my care provider or service?</b>\nA: If you have
        any issues with your care provider or service, please contact UCare support at support@ucare.com. We will do our
        best to resolve any issues as quickly as possible.
    </string>
</resources>