<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PrivacyPolicy" android:orientation="vertical" android:gravity="center"
        android:id="@+id/ppDescription2">
    <TextView
            android:text="@string/privacy_and_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/privacyPolicy" android:textStyle="bold"
            android:textSize="34sp" android:textColor="#000000" android:gravity="center"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:textAlignment="center" android:id="@+id/PPDescription"
                      android:padding="10dp">
            <TextView
                    android:text="@string/privacyPolicyParagraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/PPDescription1" android:layout_margin="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/privacyPolicyParagraph2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/PPDescription2"
                    android:textAlignment="center" android:layout_margin="10dp" android:textSize="16sp"/>
            <TextView
                    android:text="@string/privacyPolicyParagraph3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/PPDescription3"
                    android:textAlignment="center" android:layout_margin="10dp" android:textSize="16sp"/>
            <TextView
                    android:text="@string/privacyPolicyParagraph4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/PPDescription4"
                    android:textAlignment="center" android:layout_margin="10dp" android:textSize="16sp"/>
            <TextView
                    android:text="@string/privacyPolicyParagraph5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/PPDescription5"
                    android:textAlignment="center" android:layout_margin="10dp" android:textSize="16sp"/>
            <TextView
                    android:text="@string/privacyPolicyParagraph6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/PPDescription6"
                    android:textAlignment="center" android:layout_margin="10dp" android:textSize="16sp"/>
            <TextView
                    android:text="@string/privacyPolicyParagraph7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/PPDescription7"
                    android:textAlignment="center" android:layout_margin="10dp" android:textSize="16sp"/>
            <TextView
                    android:text="@string/privacyPolicyParagraph8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/PPDescription8"
                    android:textAlignment="center" android:layout_margin="10dp" android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>