<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FAQ" android:orientation="vertical">

    <TextView
            android:text="@string/faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/faq"
            android:textStyle="bold" android:textSize="34sp" android:textColor="#000000" android:gravity="center"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/faqParagraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/faqDesc1" android:textSize="16sp"
                    android:layout_margin="10dp" android:textAlignment="viewStart"/>
            <TextView
                    android:text="@string/faqParagraph2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/faqDesc2" android:textSize="16sp"
                    android:layout_margin="10dp" android:textAlignment="viewStart"/>
            <TextView
                    android:text="@string/faqParagraph3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/faqDesc3" android:textSize="16sp"
                    android:layout_margin="10dp" android:textAlignment="viewStart"/>
            <TextView
                    android:text="@string/faqParagraph4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/faqDesc4" android:textSize="16sp"
                    android:layout_margin="10dp" android:textAlignment="viewStart"/>
            <TextView
                    android:text="@string/faqParagraph5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/faqDesc5" android:textSize="16sp"
                    android:layout_margin="10dp" android:textAlignment="viewStart"/>
            <TextView
                    android:text="@string/faqParagraph6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/faqDesc6" android:textSize="16sp"
                    android:layout_margin="10dp" android:textAlignment="viewStart"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>