<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutUs" android:orientation="vertical">

    <TextView
            android:text="@string/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/faq"
            android:textStyle="bold" android:textSize="34sp" android:textColor="#000000" android:gravity="center"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:padding="10dp">
            <TextView
                    android:text="@string/aboutUsParagraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/aboutUsDescription1"
                    android:layout_margin="10dp" android:textSize="16sp" android:textAlignment="center"/>
            <TextView
                    android:text="@string/aboutUsParagraph2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/aboutUsDescription2"
                    android:layout_margin="10dp" android:textSize="16sp" android:textAlignment="center"/>
            <TextView
                    android:text="@string/aboutUsParagraph3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/aboutUsDescription3"
                    android:layout_margin="10dp" android:textSize="16sp" android:textAlignment="center"/>
            <TextView
                    android:text="@string/aboutUsParagraph4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/aboutUsDescription4"
                    android:layout_margin="10dp" android:textSize="16sp" android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>