<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/purple_gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
    <ImageView
            android:layout_width="256dp"
            android:layout_height="223dp" app:srcCompat="@drawable/ucarelogorb" android:id="@+id/logo2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.003"
            android:contentDescription="@string/background" app:layout_constraintHorizontal_bias="0.496"/>
    <TextView
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/createaccount"
            android:textStyle="bold" android:textSize="30sp"
            android:textColor="#F6F6F4"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.248"
            app:layout_constraintTop_toBottomOf="@+id/logo2"/>
    <TextView
            android:text="@string/your_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/email"
            android:textColor="#F3F0F0"
            app:layout_constraintStart_toStartOf="@+id/yourusername"
            app:layout_constraintTop_toBottomOf="@+id/enterUsername"/>
    <TextView
            android:text="@string/your_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/yourusername"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.158" android:textColor="#F3F0F0"
            app:layout_constraintTop_toBottomOf="@+id/createaccount"/>
    <EditText
            android:id="@+id/enterEmail2"
            android:layout_width="331dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/enterUsername"
            app:layout_constraintEnd_toEndOf="@+id/enterUsername"
            android:hint="@string/enter_your_email" android:textColor="#FDFCFC" android:backgroundTint="#000000"
            android:background="@android:drawable/editbox_background_normal"
            app:layout_constraintHorizontal_bias="0.625"
            tools:ignore="TextFields" android:textColorHint="#FAFAFA"/>
    <EditText
            android:id="@+id/enterUsername"
            android:layout_width="331dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/enter_your_username" android:textColor="#FDFCFC" android:backgroundTint="#000000"
            android:background="@android:drawable/editbox_background_normal"
            tools:ignore="TextFields" android:textColorHint="#FAFAFA"
            app:layout_constraintTop_toBottomOf="@+id/yourusername"
            app:layout_constraintHorizontal_bias="0.625"/>
    <EditText
            android:id="@+id/enterPassword"
            android:layout_width="331dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/enterEmail2"
            app:layout_constraintEnd_toEndOf="@+id/enterEmail2"
            android:hint="@string/enter_your_password" android:textColor="#FFFEFE"
            android:background="@android:drawable/editbox_background_normal"
            android:backgroundTint="#000000"
            app:layout_constraintHorizontal_bias="0.625" tools:ignore="TextFields"
            android:textColorHint="#FFFFFF"/>
    <TextView
            android:text="@string/your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/email"
            android:textColor="#F8F7F7"
            app:layout_constraintTop_toBottomOf="@+id/enterEmail2"/>
    <TextView
            android:text="@string/already_have_an_account_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/already_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="#FBFBFB" app:layout_constraintTop_toBottomOf="@+id/create"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/sign_in_button"
            app:layout_constraintTop_toBottomOf="@+id/already_have_an_account" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#4281A4" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.0" android:onClick="openSigning" android:textColor="#FFFFFF"/>
    <Button
            android:id="@+id/create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:onClick="create"
            android:backgroundTint="#144281"
            app:cornerRadius="30dp"
            app:layout_constraintTop_toBottomOf="@+id/enterConfirmPassword"
            app:layout_constraintEnd_toEndOf="@+id/enterConfirmPassword" android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/enterConfirmPassword"/>
    <TextView
            android:text="@string/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/confirmPassword"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/enterPassword"
            app:layout_constraintStart_toStartOf="@+id/password"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/enterConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
            android:background="@android:drawable/editbox_background"
            app:layout_constraintEnd_toEndOf="@+id/enterPassword"
            app:layout_constraintStart_toStartOf="@+id/enterPassword" android:backgroundTint="#000000"
            android:hint="Enter Password Again" android:textColorHint="#FFFFFF" android:textColor="#FFFEFE"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="@+id/logo2"
    />

</androidx.constraintlayout.widget.ConstraintLayout>